Add footer with copyright information
Added footer section with copyright notice.

--- a/Simple Blog Website/index.html
+++ b/Simple Blog Website/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Culture</title>
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <nav class="genre-nav">
-        <p class="head-title" href="index.html">Culture</p>
+        <a class="head-title" href="index.html">Culture</a>
             <div class="buttons">
                 <button class="genre-btn" data-target="about">About</button>
                 <button class="genre-btn" data-target="punk">Punk Rock</button>
@@ -30,7 +31,7 @@
                 own unique culture, history, and fanbase that contribute to the rich 
                 tapestry of the music world.
             </p>
-            <button class="read-more-btn" id="about">Read More</button>
+            <button class="read-more-btn">Read More</button>
         </section>
         <!-- ABOUT SECTION -->
 <section class="about" id="about">
@@ -53,7 +54,6 @@
     </div>
   </div>
 </section>
-    </section>
    <!-- GENRE SECTIONS -->
 <section class="genre punk" id="punk">
     <h2 class="header-title">Genre</h2>
@@ -64,7 +64,6 @@
             <h3>Green Day</h3>
             <p>Green Day is an American punk rock band known for catchy melodies and socially charged lyrics.</p>
         </div>
-
         <div class="music-card" data-bg="img\Blink-182.jpeg">
             <h3>Blink‑182</h3>
             <p>Blink‑182 blends fast pop‑punk with humor and emotional themes, shaping late‑90s punk.</p>
@@ -118,7 +117,6 @@
         </div>
     </div>
 </section>
-
 <section class="genre grunge" id="grunge">
     <h2 class="header-title">Genre</h2>
     <h2 class="music-title">Grunge</h2>
@@ -128,12 +126,10 @@
             <h3>Nirvana</h3>
             <p>Nirvana brought grunge into the mainstream with raw emotion and distorted guitars.</p>
         </div>
-
         <div class="music-card" data-bg="img\Alice in Chains.jpeg">
             <h3>Alice in Chains</h3>
             <p>Alice in Chains mixed heavy riffs with dark harmonies and emotional lyrics.</p>
         </div>
-
         <div class="music-card">
             <h3>Nine Inch Nails</h3>
             <p>Nine Inch Nails fused industrial sounds with alternative rock experimentation.</p>
@@ -141,6 +137,9 @@
     </div>
 </section>
 </div>
+<footer class="foot">
+    <p>&copy; 2025 Culture. All rights reserved.</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
