--- a/Simple Blog Website/index.html
+++ b/Simple Blog Website/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <!-- HERO SECTION -->
         <section class="main">
-            <h1 class="greet">Welcome to Culture</h1>
+            <h1 class="greet">Welcome to <h1 class="cult">Culture</h1>
             <p class="content">
                 Explore the diverse world of music genres, from the rebellious sounds 
                 of Punk Rock to the intense energy of Thrash Metal. Each genre has its 
@@ -54,11 +54,11 @@
     </div>
   </div>
 </section>
-   <!-- GENRE SECTIONS -->
+    <!-- GENRE SECTIONS -->
+    <!-- PUNK GENRE-->
 <section class="genre punk" id="punk">
     <h2 class="header-title">Genre</h2>
     <h2 class="music-title">Punk</h2>
-
     <div class="music-cards">
         <div class="music-card" data-bg="img\Green Day.jpe">
             <h3>Green Day</h3>
@@ -75,6 +75,7 @@
         </div>
     </div>
 </section>
+    <!-- NU-METAL GENRE-->
 <section class="genre nu-metal" id="nu-metal">
     <h2 class="header-title">Genre</h2>
     <h2 class="music-title">Nu‑Metal</h2>
@@ -96,6 +97,7 @@
         </div>
     </div>
 </section>
+    <!-- METAL GENRE-->
 <section class="genre metal" id="metal">
     <h2 class="header-title">Genre</h2>
     <h2 class="music-title">Heavy Metal</h2>
@@ -117,10 +119,10 @@
         </div>
     </div>
 </section>
+    <!-- GRUNGE GENRE-->
 <section class="genre grunge" id="grunge">
     <h2 class="header-title">Genre</h2>
     <h2 class="music-title">Grunge</h2>
-
     <div class="music-cards">
         <div class="music-card" data-bg="img\Nirvana.jpeg">
             <h3>Nirvana</h3>
@@ -137,6 +139,7 @@
     </div>
 </section>
 </div>
+    <!-- FOOTER-->
 <footer class="foot">
     <p>&copy; 2025 Culture. All rights reserved.</p>
 </footer>
